--- a/static/pages/css/style.css
+++ b/static/pages/css/style.css
@@ -9,7 +9,7 @@ body {
 	font-family: "sofia-pro",sans-serif;
 	font-size: 16px;
 	font-weight: 400;
-	letter-spacing: .015em;
+	/* letter-spacing: .015em; */
 	background: #0d202b;
 }
 .App {
@@ -520,4 +520,830 @@ h2 {
 }
 .patch .post .article h2 {
 	margin-top: 20px;
+}
+
+/* /////////////////////////////////////// */
+/* + file css  */
+
+*{
+    padding: 0;
+    margin: 0;
+}
+/* input tag */
+
+input:focus{
+    outline:none;
+}
+
+.add-border{
+    border: 2px solid orange !important;
+    transition: all 0.3s;
+}
+
+.partners-banner:hover{
+    border: 2px solid orange !important;
+    transition: all 0.3s;
+}
+
+body{
+    background: #0d202b;
+    font-family: 'Roboto', sans-serif;
+}
+.nav{
+    position: sticky;
+    /* top: 0; */
+    height: 50px;
+    z-index: 99;
+    margin-bottom: 30px;
+    /* background: #102531; */
+    border-bottom: 1px solid #17313a;
+    
+}
+
+.nav-toolbar{
+    position: sticky;
+    /* top: 0; */
+    height: 50px;
+    z-index: 100;
+    /* margin-bottom: 30px; */
+    /* background: #102531; */
+    border: 2px solid #17313a;
+}
+
+.container{
+    max-width: 1200px;
+    margin: auto;
+}
+
+a{
+    text-decoration: none;
+}
+
+a:hover{
+    color: white;
+}
+
+ul{
+    list-style: none;
+}
+
+.nav-links{
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.nav-item{
+    margin: 15px 0;
+}
+
+.nav-link{
+    align-items: center;
+    position: relative;
+    width:auto;
+    height: 100%;
+    color: #88a0a7;
+    font: 15px;
+    padding: 0 10px;
+    transform: all .3s;
+    background: transparent;
+}
+
+
+/* dropdown menu*/
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #102531;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+    color: #88a0a7;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  /* dropdown click */
+
+  .click-dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .btn-dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #102531;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    /* padding: 12px 16px; */
+    top: 40px;
+    left: 0px;
+    z-index: 100;
+    color: #88a0a7;
+  }
+  
+  .btn-dropdown-content-click {
+    display: block;
+  }
+
+  
+
+  /*  */
+
+ 
+  
+  .nav-links-sub{
+      display: flex;
+      flex-direction: column;
+  }
+
+  /* nav-wrapper */
+  .nav-wrapper{
+      display: flex;
+      height: 100%;
+      padding: 0;
+      justify-content: space-between;
+  }
+
+
+  /* nav-brand */
+  .nav-brand{
+      display: flex;
+      align-items: center;
+      color: #fff;
+      font-size: 18px;
+      font-weight: 600;
+      margin-right: 15px;
+      padding: 10px 0;
+  }
+
+  .searchbar{
+      margin: 0 150px;
+  }
+
+  .brand{
+      height: 22px;
+  }
+
+.searchbar-input{
+    height: 20px;
+    width: 500px;
+    padding: 8px;
+    background: #102531;
+    border: none;
+    color: white;
+}
+
+.search-input{
+    height: 20px;
+    width: 300px;
+    padding: 8px;
+    background: #102531;
+    border: none;
+    color: white;
+}
+
+.search-input:hover{
+    border: 1px solid orange;
+}
+
+
+.searchbar-icon{
+    height: 16px;   
+    margin-right: 20px;
+}
+
+/* btn */
+.cta-btn{
+    width: 180px;
+    margin: 5px 0;
+}
+
+/* .cta{
+    width: 200px;
+    margin: 5px 0;
+} */
+
+.btn{
+    min-height: 0;
+    color: #fff;
+    font-size: 13px;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: .1em;
+    background: #4080b0;
+    border: none;
+    /* padding: 12px 0; */
+    padding: 12px 15px;
+    box-shadow: inset 0 0 2px 0 #0d202b;
+    border-radius: 3px;
+    /* margin-left: 15px; */
+    transition: all .3s;
+}
+
+.btn-dark{
+    min-height: 0;
+    color: #fff;
+    font-size: 13px;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: .1em;
+    background: none;
+    border: 1px solid #17313a;
+    /* padding: 12px 0; */
+    padding: 12px 15px;
+    box-shadow: inset 0 0 2px 0 #0d202b;
+    border-radius: 3px;
+    margin-left: 15px;
+    transition: all .3s;
+}
+
+.btn-dark:hover{
+    border: 1px solid orange;
+}
+
+.btn-dropdown{
+    background: #123040; 
+    padding: 10px;
+    width: 80px;
+    text-align: left;
+} 
+
+.btn:hover{
+    background: #3999e2;
+}
+
+.searchbar{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    transition: border .3s;
+    line-height: 1.1em;
+    background: transparent;
+    min-width: 300px;
+    min-height: 35px;
+    border: 1px solid #17313a;
+    background: #102531;
+    margin: 0;
+    padding: 5px 10px;
+}
+
+
+.player-search{
+    align-self: center;
+    flex-grow: 1;
+    min-height: 0;
+    padding: 0;
+    margin: 0 100px;
+    border-radius: 4px;
+}
+ 
+/* home-header */
+.home-header{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-top: 60px;
+    margin-bottom: 80px;
+    align-items: center; 
+}
+
+.home h1{
+    color: #fff;
+    font-size: 36px;
+    font-weight: 600;
+    line-height: 1.5em;
+    margin: 0;
+}
+
+.home h2{
+    margin-bottom: 20px;
+    color: #d47559;
+    font-size: 21px;
+    font-weight: 600;
+    margin: 0;
+}
+
+.home p{
+    text-align: left;
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 40px;
+    color: #88a0a7;
+}
+
+p{
+    line-height: 2em;
+    margin: 0 0 20px;
+    max-width: 700px;
+}
+
+
+/* partners-banner */
+.partners-banner{
+    position: relative;
+    font-size: 21px;
+    background: #102531;
+    background-image: url('../img/partners-bg.png');
+    background-position: 50%;
+    background-size: cover;
+    border: 1px solid #17313a;
+    width: 100%;
+    height: 100px;
+    color: hsla(0,0%,100%,.9);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    cursor: pointer;
+    transition: all .3s;
+    margin: 0 auto 30px;
+}
+
+.update-title{
+    z-index: 5;
+    font-weight: 600;
+    transition: all .3s;
+}
+
+.update-subtitle{
+    font-size: 16px;
+    color: #579dd4;
+    font-weight: 400;
+    transition: all .3s;
+}
+
+
+/* row */
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+    /* height: 900px; */
+}
+
+/* column */
+.col{
+    /* flex: 0 0 100%;
+    max-width: 100%; */
+    width: 45%;
+}
+
+/* home app */
+.app-image{
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.app-info a{
+    color: #4080b0;
+}
+
+.app-info a:hover{
+    color: #3999e2;
+}
+
+.left{
+    justify-content: flex-start;
+}
+
+.app-info{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.right{
+    padding-left: 80px;
+}
+
+/* image-full */
+.image-full{
+    transform: scale(1.05) perspective(2910px) rotateY(
+    12deg) rotateX(
+    3deg) rotate(
+    -2deg); 
+}
+
+/* image-crop */
+.image-crop{
+    right: 0;
+    transform: translateY(-10%) scale(1.05) perspective(2910px) rotateY(
+    12deg) rotateX(
+    3deg) rotate(
+    -2deg); 
+    position: absolute;
+    top: 40%;
+}
+
+.divider{
+    display: block;
+    width: 100%;
+    height: 1px;
+    background: #17313a;
+    margin-top: 20px;
+    margin: 10px 0 25px;
+}
+
+.divider-features{
+    display: block;
+    width: 100%;
+    height: 1px;
+    background: #0d202b;
+    margin-top: 20px;
+    margin: 10px 0 25px;
+}
+
+.ezreal{
+    width: 400px;
+}
+
+
+/* Features */
+
+.features{
+    padding: 80px 0;
+    background-size: #102531;
+}
+
+.features-title{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+}
+
+.features-title h2{ 
+    color: #fff;
+    font-size: 28px;
+    font-weight: 600;
+    line-height: 1.3em;
+    margin: 0 0 10px;
+    text-align: center;
+}
+
+.app-features{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background: #123040;
+    margin: 30px 10px 0;
+    padding: 0;
+    border-radius: 3px;
+    width: 280px;
+}
+
+.row-features{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+.app-features h4{
+    font-family: "sofia-pro",sans-serif;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.3em;
+    margin: 0;
+    padding: 20px;
+}
+
+.app-features p{
+    line-height: 1.8em;
+    margin: 0;
+    padding: 20px 20px 40px;
+    text-align: center;
+}
+
+/* toturial */
+.tutorial{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    /* background: #123040; */
+    margin: 30px 10px 0;
+    padding: 0;
+    border-radius: 3px;
+    width: 280px;
+}
+
+.tutorial h4{
+    font-family: "sofia-pro",sans-serif;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.3em;
+    margin: 0;
+    padding: 20px;
+}
+
+.tutorial p{
+    line-height: 1.8em;
+    margin: 0;
+    padding: 20px 20px 40px;
+    text-align: center;
+}
+
+.btn-down{
+    width: 20%;
+	margin:auto;
+}
+
+
+/* footer */
+.footer{
+    margin-top: auto;
+    font-size: 15px;
+    padding: 30px 0 0;
+    background: #102531;
+    border-top: 1px solid #17313a;
+}
+
+.footer-links{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-links a{
+    text-align: center;
+    color: #88a0a7;
+    margin: 0 30px;
+    transition: all .3s;
+}
+
+.cookies{
+    text-align: center;
+    color: #88a0a7;
+    margin: 0 30px;
+    transition: all .3s;
+}
+
+.switch{
+    text-align: center;
+    color: #88a0a7;
+    /* margin: 0 30px; */
+    transition: all .3s;
+}
+
+.footer-links a:hover{
+    color: #fff;
+}
+
+.footer-about{
+    color: hsla(0,0%,100%,.9);
+    font-size: 14px;
+    margin-bottom: 0;
+    text-align: center;
+    max-width: none;
+}
+
+.footer-copyright{
+    color: #88a0a7;
+    font-size: 14px;
+    margin-top: 10px;
+    margin-bottom: 0;
+    text-align: center;
+    max-width: none;
+}
+
+
+/* switch toggle */
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 30px;
+    height: 14px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 14px;
+    width: 14px;
+    left: 4px;
+    /* bottom: 4px; */
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(14px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
+
+
+  /* css của page Champion */
+
+
+
+  .col-3{
+      width: 300px;
+      height: auto;
+  }
+
+  .col-12{
+      width: 850px;
+      height: auto;
+  }
+
+  .filter-title{
+      position: relative;
+      font-weight: 400;
+      padding: 10px 0;
+      transition: all .3s;
+      margin-top: 10px;
+      cursor: pointer;
+      color: #88a0a7; 
+  }
+
+  .filter-item{
+    position: relative;
+    font-weight: 400; 
+    transition: all .3s;
+    margin-top: 15px;
+    cursor: pointer;
+    color: #88a0a7; 
+  }
+
+  .filter-item:hover,.filter-title:hover{
+    color: #fff;
+  }
+
+  .selected {
+    background: #d47559; 
+  }
+
+  .filter-icon{
+    width: 24px;
+    color: #88a0a7;
+    margin-right: 7px;
+  }
+
+  .block-left{
+      margin-right: 30px;
+  }
+
+  .block-right{
+      padding-left: 30px;
+      border-left: 1px solid #17313a;
+  }
+
+
+/* Characters */
+
+.characters-list{
+    display: flex;
+    justify-content: space-between;
+}
+
+.characters-item{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* width: 12.5%; */
+    padding: 10px 15px;
+} 
+
+.update{
+    display: flex;
+    justify-content: space-between; 
+    margin-bottom: 20px;
+}
+
+ 
+
+ 
+
+.characters-wrapper{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 5px;
+    transition: all .3s;
+}
+
+.origin-icon{
+    width: 35px;
+    height: 35px;
+    min-width: 35px;
+    min-height: 35px;
+    vertical-align: inherit;
+    transition: all .3s;
+}
+
+.character-icon{ 
+    width: 55px;
+    height: 55px;
+    min-width: 55px;
+    min-height: 55px;
+    vertical-align: inherit;
+    transition: all .3s;
+}
+
+.character-icon:hover{
+    border: 1px solid orange;
+}
+
+.character-name{
+    font-size: 14px;
+    text-align: center;
+    line-height: 1.3rem;
+    margin: 0;
+    transition: all .3s;
+    color: #88a0a7;
+}
+
+.character-name:hover{
+    color: #fff;
+}
+
+.sub-filter{
+    display: none;
+}
+
+.open{
+    display: block;
+}
+
+.arrow-up{
+    transform: rotate(180deg);
+}
+
+.tier-group{
+    display: flex;
+    justify-content: left;
+    border: 1px solid #17313a;
+    margin-bottom: 20px;
+}
+
+.character-category{
+    /* background: #ff7f7f; */
+    min-width: 70px;
+    min-height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
